# kafka-data-stream

./: README.md  pyproject.toml
.local/kafka/: docker-compose.yml
.local/kafka_ui/: docker-compose.yml
.local/minio/: docker-compose.yml
.local/postgres/: docker-compose.yml
src/: manage.py
src/conf/: .env  settings.py
src/entities/: image_metadata.py  kafka.py  message_producer.py  minio.py
src/repositories/: image_storage.py  kafka_consumer.py  kafka_producer.py
src/services/: message_consumer.py  message_producer.py
src/utils/: logger.py
table_creation/: table_creation.sql  table_creation_helper.py
tests/: conftest.py  test_consumer.py  test_image_storage.py  test_producer.py  test_serialization.py
